# Retro-Sound-Studio

./: .gitignore  LICENSE  README.md
frontend/: index.html  style.css
frontend/js/: app-state.js  export.js  main.js  melody.js  params.js  playback.js  presets.js  synth.js  tauri.js  ui.js  visualizer.js
presets/melody-presets/: boss_bass_hits.json  boss_hat_alarm.json  boss_kick_alarm.json  boss_lead_alarm.json  boss_pulse_ticks.json  boss_snare_alarm.json  dungeon_bass_ostinato.json  dungeon_hat_steps.json  dungeon_kick_steps.json  dungeon_lead_motif.json  dungeon_pluck_stabs.json  dungeon_snare_steps.json  factory_bass_pulse.json  factory_hat_steam.json  factory_kick_press.json  factory_lead_hook.json  factory_snare_clank.json  factory_stab_pattern.json  finale_bass_charge.json  finale_hat_charge.json  finale_kick_charge.json  finale_lead_charge.json  finale_snare_charge.json  finale_tick_ostinato.json  neon_bass_roots.json  neon_hat_offbeats.json  neon_kick_grid.json  neon_lead_phrase_a.json  neon_pluck_offbeats.json  neon_snare_backbeat.json  ocean_bass_tide.json  ocean_hat_splash.json  ocean_kick_soft.json  ocean_lead_swell.json  ocean_pluck_ripples.json  ocean_snare_soft.json  skyline_arp_glass.json  skyline_bass_drive.json  skyline_hat_ticks.json  skyline_kick_drive.json  (+8 more)
scripts/: audit-sound-creator-ui.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: app_state.rs  audio.rs  export.rs  lib.rs  main.rs  presets.rs
src-tauri/src/synth/: effects.rs  envelope.rs  filter.rs  lfo.rs  mod.rs  oscillator.rs
tools/: generate_data_pack.mjs
(+52 files in other folders)
