[package]
name = "retro-sound-studio"
version = "0.1.0"
description = "A Retro Sound Studio"
authors = ["you"]
edition = "2021"
default-run = "retro-sound-studio"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["fs-all", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.19"
hound = "3.5"
midly = "0.5.3"
mp3lame-encoder = "0.1.4"
vorbis_rs = "0.5.2"
